--- a/front/src/pages/Fandom/Fandom.scss
+++ b/front/src/pages/Fandom/Fandom.scss
@@ -125,7 +125,7 @@
 
         &_middle {
             width: calc(60% - 16px);
-            height: 100px;
+            // height: 100px;
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
