--- a/front/src/pages/PersonalAccount/HistoryEl/HistoryEl.scss
+++ b/front/src/pages/PersonalAccount/HistoryEl/HistoryEl.scss
@@ -5,27 +5,15 @@
     justify-content: start;
     align-items: start;
     align-content: start;
-    gap: 32px;
     @media(max-width: 1000px){
         padding-bottom: 100px !important;
     }
     &_header{
         width: 100%;
-        display: flex;
-        justify-content: start;
-        gap: 16px;
-        align-items: center;
+        justify-content: start !important;
         padding-top: 30px;
-        &_title{
-            font-family: 'ARIAL bold';
-            font-size: 24px;
-        }
         &_choise{
-            padding: 4px 16px;
             background-color: #1F1E1E;
-            border-radius: 50px;
-            font-family: 'ARIAL regular';
-            font-size: 16px;
             cursor: pointer;
             &_active{
                 background-color: #007AFF;
@@ -36,17 +24,8 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            &_title{
-                font-size: 16px;
-                font-family: 'ARIAL bold';
-                font-weight: 700;
-            }
             &_btn{
-                display: flex;
-                justify-content: center;
-                align-items: center;
                 padding: 10px;
-                border-radius: 50px;
                 background-color: #1E1E1E;
                 transition: background-color 300ms;
                 img{
@@ -69,10 +48,5 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: start;
-        gap: 24px;
-        &_title{
-            font-family: 'ARIAL regular';
-            font-size: 16px;
-        }
     }
 }
