--- a/front/src/pages/PersonalAccount/HistoryEl/HistoryElFilm/HistoryElFilm.scss
+++ b/front/src/pages/PersonalAccount/HistoryEl/HistoryElFilm/HistoryElFilm.scss
@@ -3,7 +3,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
-    gap: 24px;
     @media(max-width: 440px){
         flex-wrap: wrap;
     }
@@ -30,14 +29,11 @@
             width: 100%;
             justify-content: start;
             align-items: center;
-            font-family: 'ARIAL bold';
-            font-size: 24px;
-            font-weight: 700;
             @media(max-width: 560px){
-                font-size: 16px;
+                font-size: 16px !important;
             }
             @media(max-width: 440px){
-                font-size: 12px;
+                font-size: 12px !important;
             }
             &_top{
                 width: 100%;
@@ -58,13 +54,11 @@
             }
             &_bottom{
                 width: 100%;
-                font-size: 16px;
-                font-weight: 700;
                 @media(max-width: 560px){
-                    font-size: 12px;
+                    font-size: 12px !important;
                 }
                 @media(max-width: 440px){
-                    font-size: 8px;
+                    font-size: 8px !important;
                 }
             }
         }
