--- a/front/src/pages/TopUp/TopUp.scss
+++ b/front/src/pages/TopUp/TopUp.scss
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 50px;
     padding-bottom: 50px !important;
     @media(max-width: 1000px){
         padding-bottom: 100px !important;
@@ -13,8 +12,6 @@
         justify-content: space-between;
         align-items: center;
         background: linear-gradient(to bottom, #2B1C2777 0%, #1E2C3B77 100%);
-        border-radius: 25px;
-        padding: 0px 10px;
         @media(max-width: 650px){
             margin-top: 20px !important;
             flex-wrap: wrap;
@@ -34,13 +31,9 @@
     &_modes{
         width: 100%;
         max-width: 500px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 43px;
         @media(max-width: 570px){
             flex-wrap: wrap;
-            gap: 70px;
+            gap: 70px !important;
         }
     }
     &_refil,
@@ -49,12 +42,8 @@
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
-        gap: 16px;
         &_title{
             width: 100%;
-            font-family: 'ARIAL bold';
-            font-size: 24px;
-            padding: 0px 20px;
             @media(max-width: 1000px){
                 text-align: center;
             }
@@ -63,7 +52,6 @@
             width: 100%;
             display: flex;
             justify-content: space-between;
-            gap: 30px;
             flex-wrap: wrap;
             @media(max-width: 1000px){
                 justify-content: center;
@@ -73,7 +61,6 @@
     &_payments{
         &_content{
             justify-content: start;
-            gap: 15px;
             @media(max-width: 1000px){
                 justify-content: center;
             }
