--- a/front/src/components/Footer/Footer.scss
+++ b/front/src/components/Footer/Footer.scss
@@ -5,7 +5,6 @@
     justify-content: start;
     padding-top: 31px !important;
     padding-bottom: 24px !important;
-    gap: 24px;
     margin-top: 50px !important;
 
     &_wrapper {
@@ -18,12 +17,7 @@
 
     &_logo {
         width: 100%;
-        display: flex;
-        justify-content: start;
-        align-items: center;
-        font-family: 'ARIAL bold';
-        font-size: 24px;
-        gap: 11px;
+        justify-content: start !important;
         line-height: 100%;
         letter-spacing: 0%;
 
@@ -45,18 +39,13 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: start;
-            gap: 16px;
 
             &_title {
                 width: 100%;
-                font-family: 'ARIAL bold';
-                font-size: 24px;
             }
 
             a {
                 width: 100%;
-                font-family: 'ARIAL regular';
-                font-size: 12px;
             }
         }
 
@@ -64,12 +53,9 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: start;
-            gap: 20px;
 
             &_title {
-                font-family: 'ARIAL bold';
                 width: 100%;
-                font-size: 24px;
                 text-align: right;
             }
 
@@ -78,15 +64,10 @@
                 display: flex;
                 justify-content: right;
                 align-items: center;
-                gap: 8px;
 
                 &_input {
                     background-color: transparent;
                     border: 1px solid #007AFF;
-                    border-radius: 28.5px;
-                    padding: 7px 15px;
-                    font-family: 'ARIAL regular';
-                    font-size: 12px;
                     color: #C7C7C7;
 
                     &::placeholder {
@@ -99,9 +80,6 @@
                 &_btn {
                     background-color: #007AFF;
                     padding: 4px 16px 5px 16px;
-                    border-radius: 28.5px;
-                    font-family: 'ARIAL regular';
-                    font-size: 16px;
                     border: 1px solid #007AFF;
                     cursor: pointer;
                     transition: color 300ms, background-color 300ms, border 300ms;
@@ -118,20 +96,10 @@
 
     &_media {
         width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 32px;
-
     }
 
     &_copy {
         width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: 'ARIAL regular';
-        font-size: 12px;
-
+        line-height: 40px;
     }
 }
