--- a/front/src/pages/Fandom/Fandom.scss
+++ b/front/src/pages/Fandom/Fandom.scss
@@ -1,9 +1,6 @@
 .Fandom {
     width: 100%;
-    display: flex;
-    justify-content: center;
     flex-wrap: wrap;
-    align-items: center;
     flex-wrap: wrap;
     padding-bottom: 20px;
 
@@ -23,15 +20,11 @@
 
     &_content {
         width: 100%;
-        display: flex;
         flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        gap: 16px;
 
         @media(max-width: 750px) {
             min-height: 500px;
-            align-content: start;
+            align-content: start !important;
         }
 
         &_nav {
@@ -39,7 +32,6 @@
             display: flex;
             justify-content: start;
             align-items: center;
-            gap: 22px;
 
             @media(max-width: 750px) {
                 width: 100%;
@@ -50,10 +42,9 @@
                 display: flex;
                 justify-content: start;
                 align-items: center;
-                gap: 17px;
 
                 @media(max-width: 340px) {
-                    gap: 7px;
+                    gap: 7px !important;
                 }
             }
 
@@ -70,12 +61,7 @@
                     align-items: center;
 
                     &_discussions {
-                        padding: 10px 15px;
                         background-color: #ffffff34;
-                        border-radius: 50px;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
                         cursor: pointer;
                         transition: color 300ms, background-color 300ms;
 
@@ -85,17 +71,13 @@
                         }
 
                         @media(max-width: 340px) {
-                            font-size: 14px;
+                            font-size: 14px !important;
                         }
                     }
                 }
             }
 
             &_item {
-                display: flex;
-                justify-content: start;
-                align-items: center;
-                gap: 10px;
                 color: rgba($color: #FFF, $alpha: .7);
                 cursor: pointer;
 
@@ -112,7 +94,6 @@
             justify-content: space-between;
             flex-wrap: wrap;
             align-content: start;
-            gap: 16px;
         }
 
         &_balance {
@@ -130,7 +111,6 @@
             justify-content: center;
             flex-wrap: wrap;
             align-content: start;
-            gap: 24px;
 
             @media(max-width: 750px) {
                 width: 100%;
@@ -143,10 +123,8 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: start;
-            gap: 16px;
             background: linear-gradient(200deg, #2b1c2777 0%, #1E2C3B77 100%);
             backdrop-filter: blur(10px);
-            border-radius: 25px;
             align-content: start;
             align-self: flex-start;
 
@@ -156,8 +134,6 @@
 
             &_title {
                 width: 100%;
-                font-family: 'ARIAL regular';
-                font-size: 12px;
                 text-transform: uppercase;
             }
 
@@ -170,16 +146,10 @@
 
             &_btn {
                 width: 100%;
-                display: flex;
-                justify-content: start;
-                align-items: center;
+                justify-content: start !important;
 
                 &_el {
-                    padding: 5px 15px;
                     background-color: #007AFF;
-                    border-radius: 50px;
-                    font-family: 'ARIAL regular';
-                    font-size: 16px;
                     cursor: pointer;
                     transition: color 300ms, background-color 300ms;
 
@@ -198,15 +168,12 @@
         height: calc(100vh - 75px);
         z-index: 999999999999;
         background-color: #000;
-        display: flex;
-        justify-content: center;
         flex-wrap: wrap;
-        align-content: start;
+        align-content: start !important;
         padding: 16px;
         opacity: 0;
         pointer-events: none;
         transition: opacity 300ms;
-        gap: 20px;
         overflow: auto;
         top: 0px;
         left: 0px;
@@ -221,15 +188,10 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            font-family: 'ARIAL bold';
 
             &_pencil {
                 background-color: #1E1E1E;
                 padding: 13px;
-                border-radius: 50px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
                 transition: background-color 300ms;
                 cursor: pointer;
 
@@ -255,7 +217,6 @@
             justify-content: center;
             flex-wrap: wrap;
             background: linear-gradient(200deg, rgba(43, 28, 39, 0.4666666667) 0%, rgba(30, 44, 59, 0.4666666667) 100%);
-            border-radius: 25px;
         }
     }
 }
