--- a/front/src/pages/Fandom/FandomCommentEl/FandomCommentEl.scss
+++ b/front/src/pages/Fandom/FandomCommentEl/FandomCommentEl.scss
@@ -3,24 +3,14 @@
     display: flex;
     justify-content: start;
     flex-wrap: wrap;
-    padding: 13px 18px;
-    gap: 16px;
     &_header{
         width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        gap: 10px;
+        justify-content: space-between !important;
         &_left{
             width: calc(70% - 10px);
-            display: flex;
-            justify-content: start;
-            align-items: center;
-            gap: 5px;
-            font-family: 'ARIAL regular';
-            font-size: 12px;
+            justify-content: start !important;
             @media(max-width: 400px){
-                font-size: 8px;
+                font-size: 8px !important;
             }
             &_time{
                 color: rgba($color: #FFF, $alpha: .7);
@@ -28,44 +18,29 @@
         }
         &_right{
             width: calc(30% - 10px);
-            display: flex;
-            justify-content: end;
-            align-items: center;
-            gap: 8px;
+            justify-content: end !important;
         }
     }
     &_round{
         width: 4px;
         height: 4px;
         background-color: #FFF;
-        border-radius: 50px;
     }
 
     &_text{
         color: rgba($color: #FFF, $alpha: .7);
-        font-family: 'ARIAL regular';
-        font-size: 16px;
         width: 90%;
         margin: auto 0 auto auto;
     }
     &_nav{
         width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        justify-content: space-between !important;
         &_left{
             width: 50%;
-            display: flex;
-            justify-content: start;
-            align-items: center;
-            gap: 10px;
+            justify-content: start !important;
             &_plus{
                 padding: 14px 8px;
                 border: 1px solid #323339;
-                border-radius: 50px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
                 &_span{
                     width: 11px;
                     height: 1px;
@@ -73,26 +48,14 @@
                 }
             }
             &_text{
-                font-family: 'ARIAL regular';
-                font-size: 12px;
                 color: rgba($color: #FFF, $alpha: .7);
             }
         }
         &_right{
             width: 50px;
-            display: flex;
-            justify-content: end;
-            align-items: center;
+            justify-content: end !important;
             &_likes{
                 background-color: rgba($color: #000000, $alpha: .25);
-                border-radius: 50px;
-                padding: 7px 17px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                gap: 9px;
-                font-size: 12px;
-                font-family: 'ARIAL regular';
                 &_img{
                     rotate: 25deg;
                 }
