--- a/front/src/pages/Fandom/FandomDiscussionEl/FandomDiscussionEl.scss
+++ b/front/src/pages/Fandom/FandomDiscussionEl/FandomDiscussionEl.scss
@@ -2,39 +2,30 @@
     width: 100%;
     border-top: 1px solid rgba($color: #FFFFFF, $alpha: .13);
     border-bottom: 1px solid rgba($color: #FFFFFF, $alpha: .13);
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    gap: 16px;
+    justify-content: start !important;
     padding: 8px 0px;
     @media(max-width: 750px){
         padding: 10px;
     }
     &_info{
-        display: flex;
-        justify-content: start;
-        align-items: center;
+        justify-content: start !important;
         flex-wrap: wrap;
         &_name{
-            font-family: 'ARIAL regular';
-            font-size: 12px;
             width: 100%;
             @media(max-width: 940px){
-                font-size: 8px;
+                font-size: 8px !important;
             }
             @media(max-width: 750px){
-                font-size: 12px;
+                font-size: 12px !important;
             }
         }
         &_members{
-            font-family: 'ARIAL regular';
-            font-size: 12px;
             color: #C7C7C7;
             @media(max-width: 940px){
-                font-size: 8px;
+                font-size: 8px !important;
             }
             @media(max-width: 750px){
-                font-size: 12px;
+                font-size: 12px !important;
             }
         }
     }
