--- a/front/src/pages/Fandom/FandomPostEl/FandomPostEl.scss
+++ b/front/src/pages/Fandom/FandomPostEl/FandomPostEl.scss
@@ -6,36 +6,26 @@
     justify-content: start;
     flex-wrap: wrap;
     align-content: start;
-    border-radius: 25px;
-    gap: 16px;
     &_header{
         width: 100%;
-        padding: 0px 16px;
         display: flex;
         justify-content: space-between;
-        gap: 10px;
         &_left{
             width: calc(50% - 10px);
-            display: flex;
-            justify-content: start;
-            align-items: center;
-            gap: 8px;
-            font-size: 12px;
-            font-family: 'ARIAL regular';
+            justify-content: start !important;
             @media(max-width: 860px){
                 width: calc(70% - 10px);
             }
             @media(max-width: 400px){
-                font-size: 8px;
+                font-size: 8px !important;
                 flex-wrap: wrap;
             }
             @media(max-width: 350px){
-                gap: 3px;
+                gap: 3px !important;
             }
             &_round{
                 width: 4px;
                 height: 4px;
-                border-radius: 50px;
                 background-color: #FFF;
             }
             &_date{
@@ -44,10 +34,7 @@
         }
         &_right{
             width: calc(50% - 10px);
-            display: flex;
-            justify-content: end;
-            align-items: center;
-            gap: 8px;
+            justify-content: end !important;
             @media(max-width: 860px){
                 width: calc(30% - 10px);
             }
@@ -56,18 +43,13 @@
     &_title{
         width: 100%;
         padding: 0px 16px;
-        display: flex;
-        justify-content: start;
-        align-items: center;
-        font-family: 'ARIAL regular';
-        font-size: 16px;
+        justify-content: start !important;
     }
    &_post{
     overflow: hidden;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    border-radius: 25px;
     width: 100%;
     &_bg{
         width: 100% !important;
@@ -76,7 +58,6 @@
             min-width: 100%;
             min-height: 400px;
             filter: blur(10px);
-            border-radius: 25px;
         }
     }
     &_content{
@@ -91,20 +72,10 @@
    }
     &_nav{
         width: 100%;
-        display: flex;
-        justify-content: start;
-        align-items: center;
+        justify-content: start !important;
         padding: 0px 16px;
         &_likes{
-            padding: 7px 17px;
             background-color: rgba($color: #000000, $alpha: .25);
-            border-radius: 28px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 12px;
-            font-family: 'ARIAL regular';
-            gap: 5px;
             cursor: pointer;
             transition: background-color 300ms, color 300ms;
             img{
