--- a/front/src/components/Film/Film.scss
+++ b/front/src/components/Film/Film.scss
@@ -1,6 +1,19 @@
 .Film {
     transition: scale 300ms;
 
+    &_ambient {
+        width: 100% !important;
+        align-items: start !important;
+
+        &_inner {
+            filter: blur(15px);
+            opacity: .7;
+            min-width: 220px;
+            min-height: 310px;
+            transition: opacity 200ms;
+        }
+    }
+
     &_img {
         width: 220px;
         height: 310px;
@@ -185,9 +198,8 @@
             opacity: 1;
         }
 
-        .Film_img {
-            // box-shadow: 0px 0px 20px #fff;
-            filter: drop-shadow(0px 0px 20px #fff);
+        .Film_ambient_inner {
+            opacity: 1;
         }
     }
 
