--- a/front/src/pages/AdminPanel/AdminPanel.scss
+++ b/front/src/pages/AdminPanel/AdminPanel.scss
@@ -14,11 +14,16 @@
                 display: flex;
                 cursor: pointer;
                 background-color: #FFFFFF50;
+                transition: background-color 300ms;
+                &:hover{
+                    background-color: #000;
+                }
                 &_item{
                     width: 30%;
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    flex-wrap: wrap;
                     &_small{
                         max-width: 60px;
                     }
@@ -31,5 +36,14 @@
                 }
             }
         }
+    }
+    &_mm{
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        z-index: 9999999999999;
+        background-color: rgba($color: #000, $alpha: .7);
+        top: 0px;
+        overflow-y: auto;
     }
 }
